<resources>
    <string name="app_name">EG TAXI Driver</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="version" translatable="false">Version 1.1</string>
    <string name="logout">Logout</string>
    <string name="please_wait">One moment please…</string>
    <string name="welcome">Welcome back </string>
    <string name="logging_in">Logging In</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="total_distance">Total Distance (KM)</string>
    <string name="moving_time">Moving Time</string>
    <string name="stopping_time">Stopping Time</string>
    <string name="total_time">Total Time</string>
    <string name="speed">Speed (Km/h)</string>
    <string name="total_money">Total Money (L.E.)</string>
    <string name="notification_fee">Your current trip fees</string>
    <string name="le">L.E</string>
    <string name="finish">Finish Current trip</string>
    <string name="finish_trip_message">Do you want to finish trip?!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="data_saved">Data has been saved…!</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_dis">Customer Destination</string>
    <string name="new_order">EG TAXI New Order</string>
    <string name="start_trip">Start Trip</string>
    <string name="failed_order">Someone else accepted the order</string>
    <string name="time">Time</string>
    <string name="money">Money</string>
    <string name="distance">Distance</string>
    <string name="my_history">My History</string>
    <string name="contact_us">Contact US</string>
    <string name="about">About US</string>
    <string name="about_message">EG Taxi V1.1 is an application for Egypt white taxi , it provides best price, security and relax for our customers</string>
    <string name="choose_lan">Language</string>
    <string name="arabic">Arabic</string>
    <string name="restart">Please restart the App </string>
    <string name="english">English</string>
    <string name="user_around">The is no User available around</string>
</resources>
