<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.globalapp.egtaxidriver.HistoryActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/spinner_dropdown_background"
            android:gravity="center"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/spinner_dropdown_background"
            android:gravity="center"
            android:text="@string/money"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/spinner_dropdown_background"
            android:gravity="center"
            android:text="@string/distance"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listHistory"
        android:layout_width="0dp"
        android:layout_height="461dp"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:listitem="@layout/history_row" />
</android.support.constraint.ConstraintLayout>
