<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.globalapp.egtaxidriver.UserActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:pointerIcon="none"
            app:errorEnabled="false"
            app:hintEnabled="true"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/txtID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:visibility="visible" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:password="false"
                android:singleLine="true"
                android:textStyle="italic" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:checked="false"
            android:elevation="1dp"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="btn_Login"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            android:textOff="@string/login"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:typeface="sans" />


    </LinearLayout>


</RelativeLayout>
